--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,12 @@
     "dev": "nodemon ./src/api/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.6.0",
     "express": "4.13.1",
     "node-yaml-config": "0.0.3",
-    "dotenv": "^8.6.0",
-    "cors": "^2.8.5"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
