--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,21 @@
   "description": "This is the demo backend app for Pesapal&#x27;s Problem 2 Re-routing/forwarding communication",
   "version": "0.0.1",
   "scripts": {
-    "start": "node ./build/app.js",
+    "start": "node ./build/client.ts",
     "build": "tsc -p .",
-    "dev": "nodemon ./src/api/index.ts"
+    "dev": "nodemon ./src/client.ts"
   },
   "dependencies": {
-    "@types/socket.io": "^3.0.2",
-    "body-parser": "^1.19.1",
+    "axios": "^0.24.0",
+    "chalk": "^4.1.2",
+    "commander": "^8.3.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.6.0",
-    "express": "^4.13.1",
+    "express": "4.13.1",
+    "inquirer": "^8.2.0",
     "node-yaml-config": "0.0.3",
-    "socket.io": "^4.4.1",
-    "utf8": "^3.0.0",
-    "uuid": "^8.3.2"
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
